--- a/views/kelas.ejs
+++ b/views/kelas.ejs
@@ -32,7 +32,8 @@
                 <form action="/delete/<%= id.id_kelas %>" method="post">
                   <input type="submit" value="Hapus">
                 </form>
-                <a href="/edit/<%=id.id_Kelas %>">Edit</a>
+                <a href="/edit/<%=id.id_kelas %>">Edit</a>
+                <a href="/kelas_mahasiswa/<%=id.id_kelas %>">Lihat Mahasiswa</a>
               </div>
             </li>
           <% }) %>
