--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,6 @@
     <script src="/send_url.js"></script>
   </head>
   <body>
-    <header>
-      <a href="/top" class="header-left">LIST</a>
-      <a href="/kelas" class="header-right">Kelas</a>
-    </header>
     <div class="container">
       <div class="container-header">
         <h1>Daftar Mahasiswa</h1>
@@ -48,6 +44,7 @@
           <% }) %>
         </ul>
       </div>
+      <a href="/top" class="cancel-button">Kembali</a>
     </div>
   </body>
 </html>
