--- a/views/kelas.ejs
+++ b/views/kelas.ejs
@@ -7,9 +7,6 @@
     <script src="/send_url.js"></script>
   </head>
   <body>
-    <header>
-      <a href="/top" class="header-left">LIST</a>
-    </header>
     <div class="container">
       <div class="container-header">
         <h1>Daftar Kelas</h1>
@@ -39,7 +36,7 @@
           <% }) %>
         </ul>
       </div>
-      <a href="/index" class="cancel-button">Kembali</a>
+      <a href="/top" class="cancel-button">Kembali</a>
     </div>
   </body>
 </html>
