--- a/views/top.ejs
+++ b/views/top.ejs
@@ -7,16 +7,19 @@
     <script src="/send_url.js"></script>
   </head>
   <body>
+    <header>
+      <a href="/index" class="header-right">MAHASISWA</a>
+      <a href="/kelas" class="header-right">KELAS</a>
+    </header>
     <div class="top-wrapper">
       <div class="top-detail">
-        <h2 class="subtitle">WEB DAFTAR MAHASISWA</h2>
+        <h2 class="subtitle">WEB UJI COBA</h2>
         <h1 class="title">LIST</h1>
         <p class="description">
-          LIST dapat membuat dan mengatur daftar mahasiswa Anda dengan mudah.
+          LIST dapat membuat dan mengatur daftar mahasiswa,dosen, dan kelas Anda dengan mudah.
           <br>
-          Tambahkan mahasiswa yang Anda inginkan kapanpun, dimanapun.
+          Tambahkan semua yang Anda inginkan kapanpun, dimanapun.
         </p>
-        <a href="/index" class="index-button">Lihat daftar</a><br>
         <a href="/login" class="logout-button">logout</a>
       </div>
       <div class="top-image">
