--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,12 +8,13 @@
 	</head>
 	<body>
 		<div class="login-form">
-			<h1>Login FORM</h1>
+			<h1>Login</h1>
 			<h2><%= error %></h2>
 			<form action="auth" method="POST">
 				<input type="text" name="username" placeholder="Username" id="username"required>
 				<input type="password" name="password" placeholder="Password" id="password" required>
-				<input type="submit">
+				<input type="submit"><br>
+				<a href="/newlogin" class="new-button">Signup</a>
 			</form>
 		</div>
 	</body>
