--- a/views/top.ejs
+++ b/views/top.ejs
@@ -8,9 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="/index" class="header-right">MAHASISWA</a>
-      <a href="/kelas" class="header-right">KELAS</a>
+      <div class="header-left">
+        <h1>TRUNOJOYO Learning</h1>
+    </div>
+    <div class="header-right">
+        <ul>
+            <li><a href="/index">Mahasiswa</a></li>
+            <li><a href="/kelas">Kelas</a></li>
+            <li><a href="#home" class="home">Home</a></li>
+        </ul>
+    </div>
     </header>
+    <main>
     <div class="top-wrapper">
       <div class="top-detail">
         <h2 class="subtitle">WEB UJI COBA</h2>
@@ -26,5 +35,6 @@
         <img src="a.jpg">
       </div>
     </div>
+  </main>
   </body>
 </html>
